--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 	"homepage": "https://github.com/mittell/node-cloudinary-setup-v1#readme",
 	"dependencies": {
 		"cloudinary": "^1.32.0",
-		"express": "^4.18.2"
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"multer": "^1.4.5-lts.1"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.1.2",
