--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"homepage": "https://github.com/mittell/node-cloudinary-setup-v1#readme",
 	"dependencies": {
 		"cloudinary": "^1.32.0",
+		"datauri": "^4.1.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"multer": "^1.4.5-lts.1"
